[package]
name = "fast-ntt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ntt", "number-theoretic-transform", "fft"]
categories = ["cryptography", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-ntt = "0.1.1"
criterion = "0.5.1"
crypto-bigint = "0.5.3"
hex = "0.4.3"
itertools = "0.11.0"
mod_exp = "1.0.1"
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "concrete"
harness = false

[features]
parallel = []
